[package]
name = "Htrace"
version = "2.0.0"
authors = ["Hyultis <hyultis@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/hyultis/rust_Htrace"
keywords = ["tracing","trace","log","logging"]
categories = ["development-tools::debugging"]
description = "simple tracing system"


[features]
default=["multi_threading"]
# this feature enable creating a module config from a hconfig
hconfig=["Hconfig"]
# this feature enable multithreading (enabled by default) [TODO: mandatory actually]
multi_threading=["singletonThread"]

[dependencies]
time = { version="0.3" , features = ["macros","formatting"]}
anyhow = "1.0"
#Hconfig = "1.1"
Hconfig = {  path="../Hconfig", optional = true }
backtrace = "0.3"
dashmap = "7.0.0-rc2"
thiserror = "2.0"
arc-swap = "1.7"
parking_lot = "0.12"
singletonThread = {  version = "1.1" , optional = true}
owo-colors = "4.2"
regex = "1.11.1"
