[package]
name = "Htrace"
version = "2.0.0"
authors = ["Hyultis <hyultis@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/hyultis/rust_Htrace"
keywords = ["tracing","trace","log","logging"]
categories = ["development-tools::debugging"]
description = "simple tracing system"


[features]
default=["default_module","threading"]
# this feature enable creating a module config from a hconfig
hconfig=["Hconfig"]
# this feature enable multithreading (enabled by default)
threading=["singletonThread","parking_lot"]
# this feature enable default module (those in modules src/modules dir)
default_module=[]

[dependencies]
time = { version="0.3" , features = ["macros","formatting"]}
anyhow = "1.0"
backtrace = "0.3"
dashmap = "7.0.0-rc2"
thiserror = "2.0"
owo-colors = "4.2"
regex = "1.11"
#Hconfig = "1.1"
Hconfig = {  path="../Hconfig", optional = true }
parking_lot = { version = "0.12" , optional = true}
singletonThread = {  version = "1.1" , optional = true}
