[package]
name = "Htrace"
version = "2.0.1"
authors = ["Hyultis <hyultis@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/hyultis/rust_Htrace"
keywords = ["tracing", "trace", "log", "logging"]
categories = ["development-tools::debugging"]
description = "simple tracing system"


[features]
default = ["default_module"]
# this feature enables creating a module config from a hconfig, activate default_module
hconfig = ["Hconfig", "default_module"]
# this feature enable default module (those in modules src/modules dir)
default_module = []
# this feature defines Htrace as a logger (https://crates.io/crates/log)
# allowing to use trace!() and other macros
# still need defining Htrace global context
log_consumer = ["log"]
# this feature defines Htrace as a tracing subscriber (https://crates.io/crates/tracing-subscriber)
# allowing to use tracing as usual
# still need defining Htrace global context
tracing_consumer = ["tracing-subscriber","tracing-log","tracing"]

# used to debug backtrace with no information
#[profile.test]
#debug = 0

[dependencies]
time = { version = "0.3", features = ["macros", "formatting"] }
anyhow = "1.0"
backtrace = { version = "0.3", features = ["std"] }
dashmap = "7.0.0-rc2"
thiserror = "2.0"
owo-colors = "4.2"
regex = "1.11"
Hconfig = { version = "2.0", optional = true }
parking_lot = "0.12"
singletonThread = "2.1.0"
log = { version = "0.4.27", features = ["std"], optional = true }
tracing-subscriber = { version = "0.3.19", features = [
    "registry",
    "env-filter",
], optional = true }
tracing-log = { version = "0.2.0", optional = true }
tracing = { version = "0.1.41", optional = true }